# Digital-Health

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  apps.txt  cmake_install.cmake  gui.ui  installservice.sh  main.py  remove.sh  service.sh  timeout  timeout.cpp  timeout.csv  times.csv
csv-parser/: Makefile  cmake_install.cmake
csv-parser/include/internal/: Makefile  cmake_install.cmake
csv-parser/programs/: Makefile  cmake_install.cmake  csv_info  csv_stats
